#
# Copyright 2016        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS =                  \
    orhash_single_vars_test     \
    orhash_array_test

orhash_single_vars_test_SOURCES = orhash_single_vars_test.c
orhash_single_vars_test_LDADD = ../src/liborhash.la
orhash_single_vars_test_LDFLAGS = # -all-static

orhash_array_test_SOURCES = orhash_array_test.c
orhash_array_test_LDADD = ../src/liborhash.la
orhash_array_test_LDFLAGS = # -all-static

